Started adding custom function feature

--- a/assets/gui/status-stack.glade
+++ b/assets/gui/status-stack.glade
@@ -21,7 +21,7 @@
             <property name="icon_size">6</property>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
@@ -64,7 +64,7 @@
             <property name="icon_size">6</property>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
@@ -108,7 +108,7 @@
             <property name="icon_size">6</property>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
@@ -152,7 +152,7 @@
             <property name="icon_size">6</property>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
@@ -197,7 +197,7 @@
             <property name="icon_size">6</property>
           </object>
           <packing>
-            <property name="expand">False</property>
+            <property name="expand">True</property>
             <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
@@ -226,9 +226,6 @@
         <property name="title" translatable="yes">page4</property>
         <property name="position">4</property>
       </packing>
-    </child>
-    <child>
-      <placeholder/>
     </child>
   </object>
 </interface>
