Checkout before passing function functionality to popover

--- a/assets/gui/gtk-queries-funcs-popover-2.glade
+++ b/assets/gui/gtk-queries-funcs-popover-2.glade
@@ -169,6 +169,33 @@
   <object class="GtkEntryCompletion" id="fn_completion">
     <property name="model">treemodelfilter1</property>
   </object>
+  <object class="GtkPopover" id="fn_popover">
+    <property name="can_focus">False</property>
+    <child>
+      <object class="GtkStack" id="fn_stack">
+        <property name="visible">True</property>
+        <property name="can_focus">False</property>
+        <child>
+          <object class="GtkSearchEntry" id="fn_search">
+            <property name="visible">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">True</property>
+            <property name="margin_top">6</property>
+            <property name="margin_bottom">6</property>
+            <property name="width_chars">40</property>
+            <property name="primary_icon_pixbuf">../icons/fn-dark.svg</property>
+            <property name="primary_icon_activatable">False</property>
+            <property name="primary_icon_sensitive">False</property>
+            <property name="completion">fn_completion</property>
+          </object>
+          <packing>
+            <property name="name">page0</property>
+            <property name="title" translatable="yes">page0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -461,25 +488,7 @@
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
-                  <object class="GtkSearchEntry" id="fn_search">
-                    <property name="visible">True</property>
-                    <property name="sensitive">False</property>
-                    <property name="can_focus">True</property>
-                    <property name="margin_left">6</property>
-                    <property name="margin_right">6</property>
-                    <property name="margin_top">6</property>
-                    <property name="margin_bottom">6</property>
-                    <property name="width_chars">40</property>
-                    <property name="primary_icon_pixbuf">../icons/fn-dark.svg</property>
-                    <property name="primary_icon_activatable">False</property>
-                    <property name="primary_icon_sensitive">False</property>
-                    <property name="completion">fn_completion</property>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">True</property>
-                    <property name="position">0</property>
-                  </packing>
+                  <placeholder/>
                 </child>
                 <child>
                   <object class="GtkStack" id="fn_doc_stack">
